--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -17,19 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/main'
-
-      - uses: actions/setup-haskell@v1.1.4
-        name: Setup Haskell Stack
+      - uses: actions/setup-haskell@v1.1
         with:
-          ghc-version: ${{ matrix.ghc }}
-          stack-version: ${{ matrix.stack }}
-
-      - uses: actions/cache@v2.1.3
-        name: Cache ~/.stack
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+          ghc-version: "8.10.4" # Exact version of ghc to use
+          # cabal-version: 'latest'. Omitted, but defalts to 'latest'
+          enable-stack: true
+          stack-version: "latest"
 
       - name: Install dependencies
         run: |
