--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  stack:
+  runhaskell:
     name: Haskell WebAPI
     runs-on: ubuntu-latest
     steps:
@@ -18,14 +18,21 @@ jobs:
           enable-stack: true
           stack-version: "2.7.1"
 
+      - name: Cache
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-stack
+        with:
+          path: ~/.stack
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.stack') }}-${{ hashFiles('**/stack.project') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Install dependencies
         run: |
           stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
-
       - name: Build
-        run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
-
-      - name: Test
-        run: |
-          stack test --system-ghc
+        run: stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+      - name: Run tests
+        run: stack test --system-ghc
