--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -9,7 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        cabal: ["3.2"]
+        ghc:
+          - "8.10.4"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-haskell@v1
@@ -28,11 +32,13 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           cabal update
-          cabal build --only-dependencies --enable-tests --enable-benchmarks
+          cabal build all --enable-tests --enable-benchmarks --write-ghc-environment-files=always --project-file cabal.${{ matrix.ghc }}.project --only-dependencies
       - name: Build
-        run: cabal build --enable-tests --enable-benchmarks all
-      - name: Run tests
-        run: cabal test all
+        run: |
+          cabal build all --enable-tests --enable-benchmarks --write-ghc-environment-files=always --project-file cabal.${{ matrix.ghc }}.project
+      - name: Test
+        run: |
+          cabal test all --enable-tests  --project-file cabal.${{ matrix.ghc }}.project
