--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -8,30 +8,34 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        cabal: ["3.2"]
+        ghc:
+          - "8.10.4"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-haskell@v1
         with:
           ghc-version: "8.10.4"
           cabal-version: "3.2"
-
-      - name: Cache
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-cabal
+          stack-version: "2.7.1"
+      - uses: actions/cache@v2.1.3
+        name: Cache ~/.stack
         with:
-          path: ~/.cabal
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          path: ~/.stack
+          key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+
       - name: Install dependencies
         run: |
-          cabal update
-          cabal build
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
+
       - name: Build
-        run: cabal build
-      - name: Run tests
-        run: cabal test all
+        run: |
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+
+      - name: Test
+        run: |
+          stack test --system-ghc
