--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -2,7 +2,7 @@ name: Haskell CI
 
 on:
   push:
-    branches: [master]
+    branches: [master, deployment]
   pull_request:
     branches: [master]
 
@@ -20,7 +20,6 @@ jobs:
       - uses: actions/setup-haskell@v1
         with:
           ghc-version: "8.10.4"
-          cabal-version: "3.2"
           stack-version: "2.7.1"
       - uses: actions/cache@v2.1.3
         name: Cache ~/.stack
